# DailyChewer

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose-cli.yml  docker-compose-gui.yml  docker-compose.yml  pyproject.toml
backend/: __init__.py
backend/api/: __init__.py  main.py  schemas.py
backend/api/routes/: __init__.py  auth.py  doctor.py  files.py  ingest.py  monthly.py  notes.py  reports.py  search.py  template.py  users.py  weekly.py
backend/dailychewer_backend/: __init__.py  cli.py  config.py  models.py
backups/dailychewer_backup_20260603_221959/: manifest.json
backups/dailychewer_backup_20260603_234249_a6ec5187/: backup_manifest.json
cli/dailychewer_cli/: __init__.py  cli.py  note_calendar.py  tui.py
config/: dailyreport-system-prompt.md  jsonrepair-system-prompt.md  monthlyreport-system-prompt.md  weeklyreport-system-prompt.md
dailychewer/: __init__.py  cli.py  config.py  models.py
dailychewer/llm/: __init__.py  optimizer.py  prompts.py
dailychewer/parser/: __init__.py  csv_parser.py  docx_parser.py  markdown_parser.py  xlsx_parser.py
dailychewer/report/: __init__.py  exporters.py  weekly_builder.py
dailychewer/storage/: __init__.py  file_store.py  index_store.py
dailychewer/utils/: date_utils.py  logger.py  redactor.py
docs/: CLI_FULL_GUIDE.md
frontend/: Dockerfile.dev  index.html  package-lock.json  package.json  tsconfig.node.json
frontend/src/: App.tsx  main.tsx  releaseNotes.ts  styles.css  vite-env.d.ts
frontend/src/api/: client.ts
input/: example.csv  example.docx  example.md  example.xlsx
scripts/: docker_smoke_test.sh  pg_smoke_test.py  release_check.sh  start_dailychewer.sh
tests/: conftest.py  test_api_phase7.py  test_cli_phase3.py  test_config_and_cli.py  test_optimizer_retry.py  test_parsers.py  test_phase5_features.py  test_phase8_admin.py  test_storage_and_utils.py
(+76 files in other folders)
